# webpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp  webpp.cpp  webpp.hpp  webpp.pc.in
Responders/: HtmlResponder.cpp  HtmlResponder.hpp  Responder.cpp  Responder.hpp  webpp-responders.cpp  webpp-responders.hpp
Server/: Server.cpp  Server.hpp  webpp-servers.cpp  webpp-servers.hpp
Sockets/: BindingSocket.cpp  BindingSocket.hpp  MasterSocket.cpp  MasterSocket.hpp  webpp-sockets.cpp  webpp-sockets.hpp
Utilities/: HttpHelpers.cpp  HttpHelpers.hpp  webpp-utilities.cpp  webpp-utilities.hpp
demo/: README.md  compile.sh  index.hpp  index.html  main.cpp  user_form.html
demo/components/: headTags.hpp  navbar.hpp
demo/pages/: app.html  home.hpp  responder.html  router.html  server.html  sockets.html
demo/templater_examples/: navbar.hpp
include/: BaseSocket.hpp  BindingSocket.hpp  Except.hpp  HttpHelpers.hpp  Logger.hpp  README.md  Responder.hpp  Router.hpp  Server.hpp  Templater.hpp  webpp.hpp
include/Sockets/: BaseSocket.hpp
src/: BaseSocket.cpp  BindingSocket.cpp  HttpHelpers.cpp  Logger.cpp  Responder.cpp  Router.cpp  Server.cpp  webpp.cpp
src/Sockets/: BaseSocket.cpp  BindingSocket.cpp
